swen430as1/tests/valid/trycatch/TryCatch_Valid_01.while
void main() {
    // Check syntax
    if(1 != 1) {
	throw 1;
    }
}
