swen430as1/tests/invalid/real/Real_Invalid_03.while
void main() {
    assert 0.0a0 == 0.0;
}
